# exceptions4c-lite

./: CHANGELOG.md  Makefile.am  README.md  clib.json  configure.ac  exceptions4c-lite.pc.in  sonar-project.properties
.github/workflows/: release.yml
docs/: Doxyfile  README.md
examples/: pet-store.c
src/: exceptions4c-lite.h
tests/: catch-all.c  catch.c  finally.c  limits.c  overflow.c  throw-uncaught.c  throw.c  throwf-uncaught.c  throwf.c
